슬라이드탑배너

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
             </ul>
         </div>
         <div class="section w100200 h800">
-            <div class="banner pr h400">
-                <div class="slide pa op"><a href="#none" class="d-block"><img src="./img/banner1.jpg" alt=""></a></div>
-                <div class="slide pa"><a href="#none" class="d-block"><img src="./img/banner2.jpg" alt=""></a></div>
-                <div class="slide pa"><a href="#none" class="d-block"><img src="./img/banner3.jpg" alt=""></a></div>
+            <div class="banner pr h400 ofh">
+                <div class="slides">
+                    <div class="slide"><a href="#none" class="d-block"><img src="./img/banner1.jpg" alt=""></a></div>
+                    <div class="slide"><a href="#none" class="d-block"><img src="./img/banner2.jpg" alt=""></a></div>
+                    <div class="slide"><a href="#none" class="d-block"><img src="./img/banner3.jpg" alt=""></a></div>
+                </div>
                 <span class="d-block pr opn"></span>
             </div>
             <ul class="content1 h150 d-flex jca aic">
