--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="section w100200 h800">
             <div class="banner pr h400 ofh">
-                <div class="slides">
+                <div class="slides d-flex">
                     <div class="slide"><a href="#none" class="d-block"><img src="./img/banner1.jpg" alt=""></a></div>
                     <div class="slide"><a href="#none" class="d-block"><img src="./img/banner2.jpg" alt=""></a></div>
                     <div class="slide"><a href="#none" class="d-block"><img src="./img/banner3.jpg" alt=""></a></div>
